--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "Shoping list built with the mern stack",
   "main": "server.js",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
     "server": "nodemon server.js",
+    "client":"npm start --prefix client",
+    "dev":"concurrently \"npm run server\" \" npm run client\"",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Eric Naiman",
