--- a/client/package.json
+++ b/client/package.json
@@ -15,8 +15,7 @@
     "react-transition-group": "^4.4.1",
     "reactstrap": "^8.4.1",
     "redux": "^4.0.5",
-    "redux-thunk": "^2.3.0",
-    "uuid": "^8.1.0"
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
