--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 
 # production
 /build
+/config
 
 # misc
 .DS_Store
@@ -16,7 +17,7 @@
 .env.development.local
 .env.test.local
 .env.production.local
-config
+
 
 npm-debug.log*
 yarn-debug.log*
